--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/architect/assets/css/style.css?v=aa5c3cf3eb3cb76ac712fdf2b5cfe0322f2d9ef8" media="screen" type="text/css">
+    <link rel="stylesheet" href="/architect/assets/css/style.css" media="screen" type="text/css">
     <link rel="stylesheet" href="/architect/assets/css/print.css" media="print" type="text/css">
 
     <!--[if lt IE 9]>
