Change something of index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
-<title>Architect theme | Architect is a theme for GitHub Pages.</title>
+<title>文~ | 前端er</title>
 <meta property="og:title" content="Architect theme" />
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Architect is a theme for GitHub Pages." />
@@ -22,7 +22,8 @@
 <meta property="og:url" content="https://pages-themes.github.io/architect/" />
 <meta property="og:site_name" content="Architect theme" />
 <script type="application/ld+json">
-{"name":"Architect theme","description":"Architect is a theme for GitHub Pages.","author":null,"@type":"WebSite","url":"https://pages-themes.github.io/architect/","image":null,"publisher":null,"headline":"Architect theme","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+{"name":"Architect theme","description":"Architect is a theme for GitHub Pages.","author":null,"@type":"WebSite","url":"https://pages-themes.github.io/architect/","image":null,"publisher":null,"headline":"Architect theme","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}
+</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
