--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
 <title>文~ | 前端er</title>
-<meta property="og:title" content="Architect theme" />
+<meta property="og:title" content="文~ 前端er" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="Architect is a theme for GitHub Pages." />
+<meta name="description" content="This is a theme for GitHub Pages." />
 <meta property="og:description" content="Architect is a theme for GitHub Pages." />
 <link rel="canonical" href="https://pages-themes.github.io/architect/" />
 <meta property="og:url" content="https://pages-themes.github.io/architect/" />
 <meta property="og:site_name" content="Architect theme" />
 <script type="application/ld+json">
-{"name":"Architect theme","description":"Architect is a theme for GitHub Pages.","author":null,"@type":"WebSite","url":"https://pages-themes.github.io/architect/","image":null,"publisher":null,"headline":"Architect theme","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}
+{"name":"文~ 前端er","description":"This is a theme for GitHub Pages.","author":null,"@type":"WebSite","url":"https://pages-themes.github.io/architect/","image":null,"publisher":null,"headline":"Architect theme","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}
 </script>
 <!-- End Jekyll SEO tag -->
 
