--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
         <h2>Do one thing at a time, and do well.</h2>
         
-          <a href="https://github.com/pages-themes/architect" class="button"><small>View project on</small> GitHub</a>
+          <a href="https://github.com/wenwenlai" class="button"><small>View project on</small> GitHub</a>
 
       </div>
     </header>
