--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header>
       <div class="inner">
-        <a href="https://pages-themes.github.io/architect/">
+        <a href="http://www.laiwenwen.me">
           <h1>Laiwenwen .me</h1>
         </a>
         <h2>Do one thing at a time, and do well.</h2>
